refactor: member 패키지 이동